--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jate",
   "version": "1.0.0",
+  "engines": {
+    "node": "19.x"
+  },
   "description": "A text editor that meets the PWA criteria and feature a number of data persistence techniques that serve as redundancy in case of options is not supported by the browser.  The application will also function offline",
   "main": "server.js",
   "scripts": {
