--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "description": "A text editor that meets the PWA criteria and feature a number of data persistence techniques that serve as redundancy in case of options is not supported by the browser.  The application will also function offline",
   "main": "server.js",
+  "NPM_CONFIG_PRODUCTION": false,
   "scripts": {
     "dev": "webpack-dev-server",
     "start:dev": "concurrently \"cd server && npm run server\" \"cd client && npm run dev\"",
